# gd32vw553_template

./: .gitignore  CMakeLists.txt  gd32vw55x.lds  readme.md
Firmware/GD32VW55x_standard_peripheral/: gd32vw55x.h  system_gd32vw55x.c  system_gd32vw55x.h
Firmware/GD32VW55x_standard_peripheral/Include/: gd32vw55x_adc.h  gd32vw55x_cau.h  gd32vw55x_crc.h  gd32vw55x_dbg.h  gd32vw55x_dma.h  gd32vw55x_eclic.h  gd32vw55x_efuse.h  gd32vw55x_exti.h  gd32vw55x_fmc.h  gd32vw55x_fwdgt.h  gd32vw55x_gpio.h  gd32vw55x_hau.h  gd32vw55x_i2c.h  gd32vw55x_pkcau.h  gd32vw55x_pmu.h  gd32vw55x_qspi.h  gd32vw55x_rcu.h  gd32vw55x_rtc.h  gd32vw55x_spi.h  gd32vw55x_syscfg.h  gd32vw55x_timer.h  gd32vw55x_trng.h  gd32vw55x_usart.h  gd32vw55x_wwdgt.h
Firmware/GD32VW55x_standard_peripheral/Source/: gd32vw55x_adc.c  gd32vw55x_cau.c  gd32vw55x_cau_aes.c  gd32vw55x_cau_des.c  gd32vw55x_cau_tdes.c  gd32vw55x_crc.c  gd32vw55x_dbg.c  gd32vw55x_dma.c  gd32vw55x_eclic.c  gd32vw55x_efuse.c  gd32vw55x_exti.c  gd32vw55x_fmc.c  gd32vw55x_fwdgt.c  gd32vw55x_gpio.c  gd32vw55x_hau.c  gd32vw55x_hau_sha_md5.c  gd32vw55x_i2c.c  gd32vw55x_pkcau.c  gd32vw55x_pmu.c  gd32vw55x_qspi.c  gd32vw55x_rcu.c  gd32vw55x_rtc.c  gd32vw55x_spi.c  gd32vw55x_syscfg.c  gd32vw55x_timer.c  gd32vw55x_trng.c  gd32vw55x_usart.c  gd32vw55x_wwdgt.c
Firmware/RISCV/env_Eclipse/: handlers.c  start.S
Firmware/RISCV/env_IAR/: low_level_init.c
Firmware/RISCV/env_SES/: GD32VW55x_Startup.s  init.c
Firmware/RISCV/stubs/: write.c
inc/: gd32vw553h_eval.h  gd32vw55x_it.h  gd32vw55x_libopt.h  main.h  systick.h
src/: gd32vw553h_eval.c  gd32vw55x_it.c  main.c  systick.c
